pipeline/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quarkus-podname
  name: quarkus-podname
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: quarkus-podname
  sessionAffinity: None
  type: ClusterIP
