pipeline/app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus-podname
  name: quarkus-podname
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: quarkus-podname
    weight: 100
